--- a/templates/bookshelf.html
+++ b/templates/bookshelf.html
@@ -5,7 +5,36 @@
 {% endblock %}
 
 {% block content %}
+    <h2>Bookshelf</h2>
     <div id="bookshelf_section1">
     {{ macros.build_shelf(books)}}
+
     </div>
+    <img id="graph" alt="graph showing how many times a book was borrowed" src="{{ url_for("static", filename="img/_graph.svg") }}">
+    <script>
+        // for loop to store places and books doesn't work so hardcoded
+        var places = [{{ places[0]["Book"] }}, {{ places[1]["Book"] }}, {{ places[2]["Book"] }}, {{ places[3]["Book"] }}, {{ places[4]["Book"] }}, {{ places[5]["Book"] }}, {{ places[6]["Book"] }}, {{ places[7]["Book"] }} ];
+        var books = [{{ books[0]["ISBN13"] }}, {{ books[1]["ISBN13"] }}, {{ books[2]["ISBN13"] }},{{ books[3]["ISBN13"] }}, {{ books[4]["ISBN13"] }}, {{ books[5]["ISBN13"] }}, {{ books[6]["ISBN13"] }}, {{ books[7]["ISBN13"] }}];
+
+        // check each book
+        for(var i=0; i<books.length; i++){
+            // get associated image
+            var bookImage = document.getElementById(books[i]);
+            // check each place
+            for (var j=0; j<places.length; j++){
+                // if book is in places, the book is available
+                if(books[i] === places[j]){
+                    bookImage.classList.remove("absent");
+                    bookImage.classList.add("available");
+                }
+                // otherwise it is absent
+                else{
+                    if(!bookImage.classList.contains("available")){
+                        bookImage.classList.add("absent");
+                    }
+                }
+            }
+        }
+    </script>
+
 {% endblock %}
