--- a/templates/info.html
+++ b/templates/info.html
@@ -8,28 +8,54 @@
     <h2>Info</h2>
 
     <div id="info_section1">
-        <h3 class="left">Who</h3>
-        <p class="right">Donec finibus enim at porta euismod. Morbi quis pellentesque tortor. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Etiam interdum congue odio, quis tempus dolor posuere vel. Nulla aliquam tristique ante in lobortis. Ut sit amet erat tempor, elementum dolor vitae, elementum lacus. Etiam malesuada ex felis. Mauris convallis feugiat lorem. Etiam pellentesque maximus sapien.</p>
+        <div class="info">
+            <h3 class="left">Who</h3>
+            <div class="right">
+                <span class="fa fa-user"></span>
+                <p >Donec finibus enim at porta euismod. Morbi quis pellentesque tortor. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Etiam interdum congue odio, quis tempus dolor posuere vel. Nulla aliquam tristique ante in lobortis. Ut sit amet erat tempor, elementum dolor vitae, elementum lacus. Etiam malesuada ex felis. Mauris convallis feugiat lorem. Etiam pellentesque maximus sapien.</p>
+            </div>
+        </div>
 
-        <h3 class="left">Why</h3>
-        <p class="right">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec dapibus nulla ut elit mattis vehicula. Nunc nec ante in nulla hendrerit sodales ut et nulla. Nulla luctus nisi vel porttitor dictum. Morbi vel hendrerit velit, ut tincidunt tellus. Proin nec sapien congue, tincidunt nunc nec, feugiat ex. Quisque feugiat diam justo, at interdum neque eleifend a. Sed feugiat tortor libero, a venenatis lectus feugiat in. In auctor imperdiet condimentum. In nec dolor id sem lobortis elementum vitae at metus. Curabitur id diam felis. Nulla pulvinar iaculis libero, posuere dignissim neque feugiat eget. Curabitur vitae purus in magna feugiat sollicitudin.</p>
+        <div class="info">
+            <h3 class="left">Why</h3>
+            <div class="right">
+                <span class="fa fa-question"></span>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec dapibus nulla ut elit mattis vehicula. Nunc nec ante in nulla hendrerit sodales ut et nulla. Nulla luctus nisi vel porttitor dictum. Morbi vel hendrerit velit, ut tincidunt tellus. Proin nec sapien congue, tincidunt nunc nec, feugiat ex. Quisque feugiat diam justo, at interdum neque eleifend a. Sed feugiat tortor libero, a venenatis lectus feugiat in. In auctor imperdiet condimentum. In nec dolor id sem lobortis elementum vitae at metus. Curabitur id diam felis. Nulla pulvinar iaculis libero, posuere dignissim neque feugiat eget. Curabitur vitae purus in magna feugiat sollicitudin.</p>
+            </div>
+        </div>
+        <div class="info">
+            <h3 class="left">Where</h3>
+            <div class="right">
+                <span class="fa fa-map-marker"></span>
+                <div>
+                    <img  alt="map of Kortrijk" src="{{url_for('static', filename='img/_Map.PNG')}}">
+                    <p>8500 Kortrijk, Belgium</p>
+                </div>
+            </div>
+        </div>
 
-        <h3 class="left">Where</h3>
-        <img class="right" alt="map of Kortrijk" src="{{url_for('static', filename='img/_Map.PNG')}}" height="30%">
+        <div class="info">
+            <h3 class="left">How</h3>
+            <div class="right">
+                <span class="fa fa-cogs"></span>
+                <a href="http://www.instructables.com">Link to instructable</a>
+            </div>
+        </div>
 
-        <h3 class="left">How</h3>
-        <a class="right" href="http://www.instructables.com">Link to instructable</a>
-
+        <div class="info">
         <h3 class="left">More Questions?</h3>
             <form method="POST" action="{{ url_for('info') }}">
-                <label>Name <input type="text" name="name" placeholder="firstname" required></label>
+                <label>Name <input type="text" name="name" placeholder="first name" required></label>
                 <label>Email <input type="email" name="email" placeholder="email" required></label>
-                <label>Message <textarea name="message" required placeholder="message"></textarea></label>
+                <label>Message <textarea name="message" required placeholder="Ask me anything"></textarea></label>
                 <button type="submit" formmethod="post">Submit</button>
             </form>
+        </div>
 
-        <h3 class="left">Social</h3>
+        <div class="info">
+            <h3 class="left">Social</h3>
+            <span><a class="fa fa-linkedin-square" href="https://www.linkedin.com/in/annelynn-pyck-112586145/"></a> <a class="fa fa-wordpress" href="http://student.howest.be/annelynn.pyck/portfolio/"></a> <a class="fa fa-facebook-square" href="https://www.facebook.com/annelynn.pyck"></a></span>
+        </div>
 
-        <span><a href="#">icon1</a> <a href="#">icon2</a> <a href="#">icon3</a></span>
     </div>
 {% endblock %}
