--- a/templates/account.html
+++ b/templates/account.html
@@ -6,7 +6,7 @@
 
 {% block content %}
     <div id="account_section1">
-        <img alt="background image with books" src="{{url_for('static', filename='img/_Placeholder.jpg')}}">
+        <img alt="background image with books" src="{{url_for('static', filename='img/AccountSection1.jpg')}}">
         <h2>Account</h2>
         <p>Welcome, {{firstname}}</p>
         <a id=button1 href={{ url_for("bookshelf") }}>Bookshelf</a>
