--- a/templates/info.html
+++ b/templates/info.html
@@ -12,7 +12,7 @@
             <h3 class="left">Who</h3>
             <div class="right">
                 <span class="fa fa-user"></span>
-                <p >Donec finibus enim at porta euismod. Morbi quis pellentesque tortor. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Etiam interdum congue odio, quis tempus dolor posuere vel. Nulla aliquam tristique ante in lobortis. Ut sit amet erat tempor, elementum dolor vitae, elementum lacus. Etiam malesuada ex felis. Mauris convallis feugiat lorem. Etiam pellentesque maximus sapien.</p>
+                <p>Thank you for your interest in my project. My name is Annelynn, I'm 21 years old and a student New Media and Communication Technology at Howest in Kortrijk, Belgium. In my free time I like to read, as you might have suspected since this project is centered around books! I also love music very much, so I spend quite a lot of time going to concerts. Lastly I like learning new languages, either coding languages or normal languages.</p>
             </div>
         </div>
 
@@ -20,7 +20,7 @@
             <h3 class="left">Why</h3>
             <div class="right">
                 <span class="fa fa-question"></span>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec dapibus nulla ut elit mattis vehicula. Nunc nec ante in nulla hendrerit sodales ut et nulla. Nulla luctus nisi vel porttitor dictum. Morbi vel hendrerit velit, ut tincidunt tellus. Proin nec sapien congue, tincidunt nunc nec, feugiat ex. Quisque feugiat diam justo, at interdum neque eleifend a. Sed feugiat tortor libero, a venenatis lectus feugiat in. In auctor imperdiet condimentum. In nec dolor id sem lobortis elementum vitae at metus. Curabitur id diam felis. Nulla pulvinar iaculis libero, posuere dignissim neque feugiat eget. Curabitur vitae purus in magna feugiat sollicitudin.</p>
+                <p> This project was created as an assignment for school. Students of New Media and Communication Technology are supposed to create a project to combine all the stuff they have learned in the past year. ShelfChecker is such a project. It combines the newly acquired knowledge in devices, users, connections and data. These four things are at the base of this undergraduate programme.</p>
             </div>
         </div>
         <div class="info">
